# rust-api

./: .env.example  .gitignore  Cargo.toml  README.md
src/: main.rs
src/models/: item.rs
src/routes/: healthcheck.rs  items.rs  mod.rs
