[package]
# The name of your package (crate).
# Cargo uses this name when building and publishing.
name = "rust-api"

# The version of your package.
# This follows Semantic Versioning (e.g., 0.1.0).
version = "0.1.0"

# The edition of the Rust language you are using.
# `2021` includes the latest features and idioms of Rust.
edition = "2021"

# Documentation comment in Cargo.toml:
# Link to more information about Cargo keys and their definitions.
# Typically, you don't modify this line—it’s just for reference.
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Add support for enviroment variables
dotenv = "0.15"

# Time
chrono = "0.4"

# Add Actix Web 4.9.0 as a dependency.
# This crate provides the web framework and server functionality.
actix-web = "4.9.0"

# Add Serde as a dependency for serialization and deserialization.
# "derive" feature allows you to use #[derive(Serialize, Deserialize)] on your structs.
serde = { version = "1.0", features = ["derive"] }

# Add Serde JSON to handle JSON input/output conveniently.
serde_json = "1.0"

# Add the UUID crate for handling Universally Unique Identifiers.
# "serde" feature enables serde serialization for UUID types.
# "v4" feature enables generating random (version 4) UUIDs (Uuid::new_v4()).
uuid = { version = "1.4", features = ["serde", "v4"] }

